foundry-jed/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foundry-jed
  labels:
    name: foundry-jed
